--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "build": "vite build",
     "lint": "eslint .",
     "typecheck": "tsc -p ./jsconfig.json",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "migrate": "node scripts/migrate-to-supabase.js",
+    "verify-migration": "node scripts/verify-migration.js",
+    "sync": "node scripts/incremental-sync.js",
+    "inspect-entities": "node scripts/inspect-base44-entities.js",
+    "create-admin": "node scripts/create-admin-user.js",
+    "sync-users-to-auth": "node scripts/sync-users-to-auth.js",
+    "reset-password": "node scripts/reset-user-password.js",
+    "update-user-ids": "node scripts/update-user-ids.js"
   },
   "dependencies": {
     "@base44/sdk": "^0.8.3",
@@ -41,11 +49,13 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/supabase-js": "^2.87.3",
     "@tanstack/react-query": "^5.84.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.16.4",
     "input-otp": "^1.4.2",
@@ -53,6 +63,7 @@
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -84,6 +95,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
+    "supabase": "^2.67.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
     "vite": "^6.1.0"
