--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,18 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+location /functions/ {
+  proxy_pass https://ossyxxlplvqakowiwbok.supabase.co/functions/v1/;
+  proxy_set_header Host ossyxxlplvqakowiwbok.supabase.co;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
+  proxy_set_header Authorization $http_authorization;
+  proxy_buffering off;
+  proxy_ssl_server_name on;
+}
+# Optional: quick OPTIONS response (avoid if you want the request proxied)
+
     # Gzip compression
     gzip on;
     gzip_vary on;
