fix: Update platform URL references from pluginhub.code045.nl to wphub.pro

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,8 @@ location /functions/ {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header Authorization $http_authorization;
+    proxy_set_header apikey $http_apikey;
+    proxy_pass_request_headers on;
   proxy_buffering off;
   proxy_ssl_server_name on;
 }
