--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 #env
 .env
-.env.*
 
 # Logs
 logs
@@ -12,7 +11,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
 dist-ssr
 *.local
 
@@ -28,3 +26,5 @@ dist-ssr
 *.sw?
 
 .env
+
+scripts
