--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ lerna-debug.log*
 node_modules
 dist-ssr
 *.local
+dist
+build
+
 
 # Editor directories and files
 .vscode/*
@@ -26,5 +29,3 @@ dist-ssr
 *.sw?
 
 .env
-
-scripts
