feat: Voeg MIME-type configuratie toe aan nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,22 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # MIME types configuration
+    types {
+        text/html html;
+        text/css css;
+        application/javascript js mjs;
+        application/json json;
+        image/svg+xml svg;
+        image/png png;
+        image/jpeg jpg jpeg;
+        image/gif gif;
+        image/webp webp;
+        font/woff woff;
+        font/woff2 woff2;
+        application/octet-stream woff ttf eot;
+    }
+
 location /functions/ {
   proxy_pass https://ossyxxlplvqakowiwbok.supabase.co/functions/v1/;
   proxy_set_header Host ossyxxlplvqakowiwbok.supabase.co;
