feat: Implement sync script for build output and update post-commit hook

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "sync-users-to-auth": "node scripts/sync-users-to-auth.js",
     "reset-password": "node scripts/reset-user-password.js",
     "update-user-ids": "node scripts/update-user-ids.js"
+    ,"publish-dist": "bash scripts/publish-dist.sh",
+    "setup-git-hooks": "bash scripts/setup-git-hooks.sh"
 
   },
   "dependencies": {
