--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --outDir dist",
+    "build": "vite build",
     "lint": "eslint .",
     "typecheck": "tsc -p ./jsconfig.json",
     "preview": "vite preview",
@@ -17,9 +17,7 @@
     "create-admin": "node scripts/create-admin-user.js",
     "sync-users-to-auth": "node scripts/sync-users-to-auth.js",
     "reset-password": "node scripts/reset-user-password.js",
-    "update-user-ids": "node scripts/update-user-ids.js",
-    "publish-dist": "bash scripts/publish-dist.sh",
-    "setup-git-hooks": "bash scripts/setup-git-hooks.sh"
+    "update-user-ids": "node scripts/update-user-ids.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
