--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ dist-ssr
 *.local
 build
 
+# WordPress Connector (development only, deployed separately as zip)
+/wp-plugin
 
 # Editor directories and files
 .vscode/*
