feat: Implement billing system with Supabase and Stripe integration
- Add Edge Functions for managing subscriptions:
  - cancel-subscription: Allows users to cancel their subscriptions immediately or at the end of the billing period.
  - create-stripe-customer: Creates a Stripe customer for new users.
  - create-subscription: Handles subscription creation for users.
  - upcoming-invoice: Fetches upcoming invoices for active subscriptions.
  - update-payment-method: Updates the payment method for a user's subscription.
  - update-subscription: Updates a user's subscription with a new price.

- Create SQL migration for billing system:
  - Extend public.users table to include Stripe customer ID and billing information.
  - Create subscription_plans table for managing subscription plans.
  - Set up Stripe sync schema for read-only data from Stripe.
  - Implement row-level security policies for user access control.
  - Create views for querying user subscriptions and active subscriptions.
  - Add functions for retrieving user subscriptions and checking feature access.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.1",
+    "stripe": "^14.21.0",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^3.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
